--- a/MvcKompApp/Views/Customer/Edit.cshtml
+++ b/MvcKompApp/Views/Customer/Edit.cshtml
@@ -47,3 +47,10 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+@*@section Scripts{
+    <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/MicrosoftAjax.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/MicrosoftMvcAjax.js")" type="text/javascript"></script>
+}*@
