--- a/MvcKompApp/Views/Home/Index.cshtml
+++ b/MvcKompApp/Views/Home/Index.cshtml
@@ -7,7 +7,19 @@
     To learn more about ASP.NET MVC visit <a href="http://asp.net/mvc" title="ASP.NET MVC Website">http://asp.net/mvc</a>.
 </p>
 <div>
-    @Html.ActionLink("Employee", "Index", "Employee")
-    <br />
-    @Html.ActionLink("Tasks", "Index", "Task")
+    <ul>
+        <li>@Html.ActionLink("Home", "Index", "Home")</li>
+        <li>@Html.ActionLink("About", "About", "Home")</li>
+        <li>@Html.ActionLink("Employee", "Index", "Employee")</li>
+        <li>@Html.ActionLink("Task", "Index", "Task")</li>
+        <li>@Html.ActionLink("Students", "Index", "Student")</li>
+        <li>@Html.ActionLink("Courses", "Index", "Course")</li>
+        <li>@Html.ActionLink("Instructors", "Index", "Instructor")</li>
+        <li>@Html.ActionLink("Departments", "Index", "Department")</li>
+        <li>@Html.ActionLink("Visitor Site", "Index", "VisitorSite")</li>
+        <li>@Html.ActionLink("Customer", "Index", "Customer")</li>
+        <li>@Html.ActionLink("Products", "Index", "Product")</li>
+        <li>@Html.ActionLink("Person", "Index", "Person")</li>
+        <li>@Html.ActionLink("UserModel", "Index", "UserModel")</li>
+    </ul>
 </div>
