--- a/MvcKompApp/Views/Shared/_Layout.cshtml
+++ b/MvcKompApp/Views/Shared/_Layout.cshtml
@@ -4,14 +4,14 @@
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/Custom.css")" rel="stylesheet" type="text/css" />
-
     <script src="@Url.Content("~/Scripts/jquery-1.8.0.min.js")" type="text/javascript"></script>
 </head>
+
 <body>
     <div class="page">
         <div id="header">
             <div id="title">
-                <h1>My MVC Application</h1>
+                <h1>My MvcKomp App</h1>
             </div>
             @if (@ViewBag.Display != null)
             {
@@ -24,22 +24,21 @@
                 <ul id="menu">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-
                     <li>@Html.ActionLink("Employee", "Index", "Employee")</li>
                     <li>@Html.ActionLink("Task", "Index", "Task")</li>
-
                     <li>@Html.ActionLink("Students", "Index", "Student")</li>
                     <li>@Html.ActionLink("Courses", "Index", "Course")</li>
                     <li>@Html.ActionLink("Instructors", "Index", "Instructor")</li>
                     <li>@Html.ActionLink("Departments", "Index", "Department")</li>
                     <li>@Html.ActionLink("Visitor Site", "Index", "VisitorSite")</li>
                     <li>@Html.ActionLink("Customer", "Index", "Customer")</li>
-
+                    <li>@Html.ActionLink("Products", "Index", "Product")</li>
+                    <li>@Html.ActionLink("Person", "Index", "Person")</li>
+                    <li>@Html.ActionLink("UserModel", "Index", "UserModel")</li>
                 </ul>
             </div>
         </div>
         <div id="main">
-
             @RenderBody()
         </div>
         <div id="footer">
