Added Image file uploader

--- a/MvcKompApp/Views/Shared/_Layout.cshtml
+++ b/MvcKompApp/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                     <li>@Html.ActionLink("Products", "Index", "Product")</li>
                     <li>@Html.ActionLink("Person", "Index", "Person")</li>
                     <li>@Html.ActionLink("UserModel", "Index", "UserModel")</li>
+                    <li>@Html.ActionLink("Image", "Index", "Image")</li>
                 </ul>
             </div>
         </div>
