--- a/MvcKompApp/Views/Course/Index.cshtml
+++ b/MvcKompApp/Views/Course/Index.cshtml
@@ -1,5 +1,4 @@
 ﻿@model IEnumerable<ContosoUniversity.Models.Course>
-
 @{
     ViewBag.Title = "Courses";
 }
@@ -10,10 +9,13 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Index", "Course", FormMethod.Post, new { id = "formSubmitId" }))
 {
-    <p>Select Department: @Html.DropDownList("SelectedDepartment","All") &nbsp; 
-    <input type="submit" value="Filter" /></p>
+    <p>
+        Select Department: @Html.DropDownList("SelectedDepartment", null, "All", new { onchange = "$('#formSubmitId').submit()" })
+         &nbsp; 
+    <input type="submit" value="Filter" />
+    </p>
 }
 
 <table>
@@ -25,25 +27,26 @@
         <th>Department</th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.CourseID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.CourseID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.CourseID })
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CourseID)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Credits)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Department.Name)
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.CourseID }) |
+            @Html.ActionLink("Details", "Details", new { id = item.CourseID }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.CourseID })
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CourseID)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Credits)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Department.Name)
+            </td>
+        </tr>
+    }
 </table>
