--- a/MvcKompApp/Views/Home/Index.cshtml
+++ b/MvcKompApp/Views/Home/Index.cshtml
@@ -21,5 +21,6 @@
         <li>@Html.ActionLink("Products", "Index", "Product")</li>
         <li>@Html.ActionLink("Person", "Index", "Person")</li>
         <li>@Html.ActionLink("UserModel", "Index", "UserModel")</li>
+          <li>@Html.ActionLink("Image", "Index", "Image")</li>
     </ul>
 </div>
