Modified Auth control

--- a/MvcKompApp/Views/Shared/_listControllers.cshtml
+++ b/MvcKompApp/Views/Shared/_listControllers.cshtml
@@ -15,6 +15,5 @@
 <li>@Html.ActionLink("Movie", "Index", "Movie")</li>
 <li>@Html.ActionLink("Pdf", "Index", "Pdf")</li>
 <li>@Html.ActionLink("Remote Validation", "Index", "RemoteValidation")</li>
-
-
- <li>@Html.ActionLink("Partial View Refresh", "PartialViewRefreshHandler", "Home")</li>
+<li>@Html.ActionLink("User Membership", "Register", "User")</li>
+<li>@Html.ActionLink("Partial View Refresh", "PartialViewRefreshHandler", "Home")</li>
