--- a/MvcKomp3/Views/Movie/Edit.cshtml
+++ b/MvcKomp3/Views/Movie/Edit.cshtml
@@ -26,8 +26,8 @@
             @Html.LabelFor(model => model.ReleaseDate)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.ReleaseDate)
-            @Html.ValidationMessageFor(model => model.ReleaseDate)
+            @Html.EditorFor(model => model.ReleaseDate.Year)
+            @Html.ValidationMessageFor(model => model.ReleaseDate.Year)
         </div>
 
         <div class="editor-label">
