--- a/MvcKomp3/Views/Shared/_Layout.cshtml
+++ b/MvcKomp3/Views/Shared/_Layout.cshtml
@@ -6,13 +6,10 @@
     <link href="@Url.Content("~/Content/Sprite.css")" rel="stylesheet" type="text/css" />
     @*<link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />*@
     <link href="@Url.Content("~/Content/Custom.css")" rel="stylesheet" type="text/css" />
-    <script src="@Url.Content("~/Scripts/jquery-1.8.0.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/jquery-ui.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery-1.7.1.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery-ui-1.8.20.js")" type="text/javascript"></script>
     <link href="@Url.Content("~/Content/themes/base/jquery-ui.css")" rel="stylesheet" type="text/css" />
-
     <link href="@Url.Content("~/Content/Pager.css")" rel="stylesheet" type="text/css" />
-
-
 </head>
 
 <body>
