--- a/MvcKomp3/Views/Shared/_Layout.cshtml
+++ b/MvcKomp3/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <script src="@Url.Content("~/Scripts/jquery-ui-1.8.20.js")" type="text/javascript"></script>
     <link href="@Url.Content("~/Content/themes/base/jquery-ui.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/Pager.css")" rel="stylesheet" type="text/css" />
+    @Content.Script("", Url)
 </head>
 
 <body>
