--- a/MvcKomp3/Views/Shared/_listControllers.cshtml
+++ b/MvcKomp3/Views/Shared/_listControllers.cshtml
@@ -13,6 +13,8 @@
 <li>@Html.ActionLink("Appointament", "MakeBooking", "Appointment")</li>
 
 <li>@Html.ActionLink("Summit", "Index", "Summit")</li>
+<li>@Html.ActionLink("AjaxPaging", "Index", "AjaxPaging")</li>
+
 
 <li>@Html.ActionLink("About", "About", "Home")</li>
 <li>@Html.ActionLink("Employee", "Index", "Employee")</li>
