--- a/MvcKomp3/Views/Home/Index.cshtml
+++ b/MvcKomp3/Views/Home/Index.cshtml
@@ -28,6 +28,9 @@
     </ul>
 </div>
 <div>
+    @Html.ActionLink("Get Xml File", "GetXmlFile", "Home")
+</div>
+<div>
 
     @using (Html.BeginForm("Index", "Home", FormMethod.Get))
     {
