--- a/MvcKomp3/Views/Product/Edit.cshtml
+++ b/MvcKomp3/Views/Product/Edit.cshtml
@@ -11,7 +11,7 @@
 
 @using (Html.BeginForm())
 {
-    @Html.ValidationSummary(true)
+    @Html.ValidationSummary(false)
     <fieldset>
         <legend>ProductViewModel</legend>
 
