--- a/MvcKomp3/Views/Task/_MessageFromController.cshtml
+++ b/MvcKomp3/Views/Task/_MessageFromController.cshtml
@@ -1,1 +1,2 @@
-﻿<h2>Ciao from Ajax call to Controll Action returning partial view</h2>
+﻿@model int
+<h2>Ciao from Ajax call to Controll Action returning partial view value @Model</h2>
