--- a/MvcKomp3/Views/Department/Edit.cshtml
+++ b/MvcKomp3/Views/Department/Edit.cshtml
@@ -10,7 +10,7 @@
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 
 @using (Html.BeginForm()) {
-    @Html.ValidationSummary(true)
+    @Html.ValidationSummary(false)
     <fieldset>
         <legend>Department</legend>
 
