--- a/MvcKomp3/Views/Shared/_listControllers.cshtml
+++ b/MvcKomp3/Views/Shared/_listControllers.cshtml
@@ -1,5 +1,5 @@
 ﻿<li>@Html.ActionLink("Home", "Index", "Home")</li>
-<li>@Html.ActionLink("Radio Test", "RadioTest", "Home")</li>
+<li>@Html.ActionLink("Radio Test", "TestRadio", "Home")</li>
 
 <li>@Html.ActionLink("WebGrid Index", "WebGridIndex", "Home")</li>
 
